Refactor examples by removing old java.io.File